2012-12-10: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Strings.h add new string for Notification for the random
	  playlist feed
	* GNUmakefile, PC.project, add RandomPlaylistFeed.[h|m]
	* Implement a random Playlist Feed
	* PlaylistInspector.[h|m] move out the threading, and
	  put it in the RandomPlaylistFeed class

2012-12-02: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* SongInspector.h
	  add method to shut up gcc from whining it may not be available
	* PlaylistItem.[h|m], LyricsInspector.[h|m]
	  Move the lyrics retriveal from web from the LyricsInspector
	  to the PlaylistItem. There is a better place for it.
	  While there, shut up gcc from whining, save as for the
	  SongInspector

2012-11-25: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* SQLiteAdaptor.[h|m]
	  restructuring, to also save retrieved lyrics from the 
	  web in the SQLite database
	* PlaylistItem.[h|m]
	  restructuring, and adding methods to retrieve, save
	  song lyrics
	* LyricsInspector.m
	  try to lookup lyrics in DB before consulting the web
	  and save found lyrics from web to DB

2012-11-11: Sebastian Reitenbach <sebastia@l00-buggdead-prods.de>
	* GNUmakefile.preamble, MPDCon.pcproj/PC.project
	* link against -lSQLClient, the SongRatings will be saved
	  in a sqlite3 database
	* PlaylistInspector.[h|m], Resources/PlaylistInspector.gorm
	  make it kind of work
	* PlaylistItem.[h|m], get rid of the Private category,
	  and use SQLiteAdaptor to store the SongRatings
	* GNUMakefile, MPDCon.pcproject/PC.project
	  Add SQLiteAdaptor.[h|m]
	* CollectionController.[h|m] new method: getAllTracks

2012-11-10: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* MPDController.[h|m]
	* Add - (void) removeSongRange: (NSRange)songRange;
	  needed for the PlaylistInspector
	* PlaylistController.[h|m]
	* expose a - (NSString *) playlistLength, which gives back
	  the length of the playlist as timestamp, needed
	  by the PlaylistInspector